2024-06-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-use-file-attributes): New defcustom and defsubst.
	(tramp-skeleton-file-exists-p):
	* tramp-adb.el (tramp-adb-handle-file-executable-p)
	(tramp-adb-handle-file-readable-p):
	* tramp-sudoedit.el (tramp-sudoedit-handle-file-executable-p)
	(tramp-sudoedit-handle-file-readable-p)
	(tramp-sudoedit-handle-file-writable-p): Use it.
	* tramp-sh.el (tramp-sh-handle-file-executable-p)
	(tramp-sh-handle-file-readable-p)
	(tramp-sh-handle-file-writable-p): Use it.
	(tramp-sh-handle-set-file-acl): Fix property name.

2024-06-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-auth-info-password): Use original
	function only for Emacs 30+.

2024-06-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-unique-process-name): New defun.
	(tramp-skeleton-make-process): Use it.
	(tramp-skeleton-process-file): New defmacro.

	* tramp-adb.el (tramp-adb-handle-process-file):
	* tramp-sh.el (tramp-sh-handle-process-file):
	* tramp-sshfs.el (tramp-sshfs-handle-process-file):
	Use `tramp-skeleton-process-file'.

	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process): Don't compute
	process name, this is done in `tramp-skeleton-make-process'.

2024-06-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-local-name): Adapt docstring.
	(tramp-skeleton-make-process): New defmacro.

	* tramp.el (tramp-handle-make-process):
	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process):
	Use `tramp-skeleton-make-process'.

	* tramp-container.el (tramp-actions-before-shell): Don't declare.

	* tramp-sh.el (tramp-actions-before-shell):
	Add ;;;###tramp-autoload cookie.

2024-06-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-path): Add "/opt/homebrew/bin" and
	"/opt/homebrew/sbin".  (Bug#71235)
